--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Introduction to Javascript</title>
 </head>
 <body>
+
+    <div id="ife">
+        
+    </div>
     
     <script src="/script.js"></script>
 </body>
