--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-    <div id="ife">
-        
+    <div id="main">
+        <h1 id="name"></h1>
+        <h3 id="height"></h3>
+        <h3 id="country"></h3>
     </div>
     
     <script src="/script.js"></script>
